--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <title>Bootstrap 4 Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <div class="container">
-  <h1>Hello <mark>Bootstrap 4</mark></h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo amet esse quo, nihil harum a soluta minima animi porro distinctio, reprehenderit itaque nulla sequi dolor fugit odio vel maxime sint.</p>
-  <hr>
-  <p>Yuk kita mulai dari <a href="project1.html">Simple Bootstrap Project</a>.</p>
+    <h1>Hello <mark>Bootstrap 4</mark></h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo amet esse quo, nihil harum a soluta minima animi porro distinctio, reprehenderit itaque nulla sequi dolor fugit odio vel maxime sint.</p>
+    <hr>
+    <p>Yuk kita mulai dari <a href="project1.html">Simple Bootstrap Project</a>.</p>
 </div>
 
+<script src="index.js"></script>
 </body>
 </html> 
